<resources>
    <string name="app_name">Mobilecsa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="customer">Customer</string>
    <string name="contact">Contact</string>
    <string name="job_order">Job Order</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_company">Add Company</string>
    <string name="search_contact">Search Contact</string>
    <string name="search_customer">Search Customer</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_security_key">SecurityKeyActivity</string>
    <string name="security_key">Security Key</string>
    <string name="ok">OK</string>
    <string name="select_industry">Industry *:</string>
    <string name="select_plant">Plant:</string>
    <string name="select_city">City:</string>
    <string name="select_province">Province:</string>
    <string name="select_country">Country:</string>
    <string name="fax">Fax</string>
    <string name="tele">Telephone</string>
    <string name="mobile">Mobile *</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="emergency">Emergency</string>
    <string name="faxcode">Fax Code:</string>
    <string name="area_code">Area Code:</string>
    <string name="er">ER (%):</string>
    <string name="mf">MF (%):</string>
    <string name="calib">Calibration (%):</string>
    <string name="spare_parts">SpareParts (%):</string>
    <string name="specimen">Specimen:</string>
    <string name="submit">Submit</string>
    <string name="fax_country_code">Fax Country Code</string>
    <string name="photo">Photo</string>
    <string name="country_code">Country Code</string>
    <string name="company">Company</string>
    <string name="photoofyou">Photo</string>
    <string name="sign_enter">Enter Signature</string>
    <string name="sign_cancel">Cancel</string>
    <string name="sign_clear">Clear</string>
    <string name="sign_save">Save</string>
    <string name="signature">Signature</string>
    <string name="lname_req">Lastname *</string>
    <string name="fname_req">Firstname *</string>
    <string name="mi_req">MI *</string>
    <string name="jobpos_req">Job Position *</string>
    <string name="address_req">Address *</string>
    <string name="date_req">Date *</string>
    <string name="industry_req">Industry *</string>
    <string name="plant_req">Plant *</string>
    <string name="city_req">City *</string>
    <string name="prov_req">Province *</string>
    <string name="mob_req">Mobile *</string>
    <string name="emergency_contact_req">Emergency Contact *</string>
    <string name="faxcode_req">Fax Code *</string>
    <string name="zip_code_req">Zip Code *</string>
    <string name="birthdate_req">Date of Birth *</string>
    <string name="area_code_req">Area Code *</string>
    <string name="country_code_req">Country Code *</string>
    <string name="company_req">Company *</string>
    <string name="contact_person_req">Contact Person *</string>
    <string name="contact_number_req">Contact Number *</string>
    <string name="user_email">android.studio@android.com</string>
    <string name="header_name">Android Studio</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="change_pass">Change Password</string>
    <string name="retype_pass">Retype Password</string>
    <string name="one_str">1</string>
    <string name="po_date_req">PO Date *</string>
    <string name="po_req">Purchase Order *</string>
    <string name="customer_req">Customer *</string>
    <string name="credited_req">Credited *</string>
    <string name="engine_model_req">Engine Model *</string>
    <string name="serial_no_req">Serial No *</string>
    <string name="ref_no">Reference No *</string>
    <string name="make_cat">Make / Category</string>
    <string name="date_rec_req">Date Received *</string>
    <string name="date_comm_req">Date Committed *</string>
    <string name="remarks_req">Remarks *</string>
    <string name="new_jo">New</string>
    <string name="approval">Approval</string>
    <string name="qc">Quality Check</string>
    <string name="date_comm">Date Commit</string>
    <string name="search_jo">Search Job Order</string>
    <string name="value">Value</string>
    <string name="col_div">&#160;:&#160;</string>
    <string name="key">Key</string>
    <string name="qc_ico_img">qcicoimg</string>
    <string name="dc_ico_img">dcicoimg</string>
    <string name="slide_right_msg">Slide right to approve date commit</string>
    <string name="p_n_m">P&amp;M</string>
    <string name="pm_status">P&amp;M</string>
    <string name="slide_qc_msg">Slide right to approve QC</string>
    <string name="percent_comple">Percentage Completion:</string>
    <string name="percent_comple_value"><u>100 %</u></string>
    <string name="completion_count">x/y works completed</string>
    <string name="new_quo">New Quotation</string>
    <string name="search_quo">Search Quotation</string>
    <string name="csa_stat">CSA</string>
    <string name="remarks_hint">Enter remarks here</string>
    <string name="plant">Plant</string>
    <string name="init_jo_encoding">Initial Job Order Encoding</string>
    <string name="init_jo_list">Initial Job Order List</string>
    <string name="search_engine_model">Type Engine Model. ex. 1000</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="re_pass">Retype Password</string>
    <string name="search_jo_no">JO Number</string>
    <string name="switch_plant">Switch Plant</string>
    <string name="preview">prev</string>
    <string name="sign">Sign</string>
    <string name="add_photo_here">Add Photo Here</string>
    <string name="search_crm">Search Crm</string>
    <string name="search_init">Search Initial</string>
    <string name="check">Check</string>
    <string name="version">09-18 -2020</string>
    <string name="photo_prob">Problem occured in displaying photo</string>
    <string name="relogin">Relogin to continue</string>
    <string name="customerId">Customer Id</string>
    <string name="modelId">Model Id</string>
    <string name="source">Source</string>
    <string name="slide">SLIDE</string>
    <string name="qc_approve_msg">Quality Check has been approved.</string>
    <string name="dc_approve_msg">Date Commit has been approved.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
