<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="CRM">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_action_nav_menu_home"
                    android:title="@string/home" />
                <item
                    android:id="@+id/nav_customer"
                    android:icon="@drawable/ic_action_nav_menu_people"
                    android:title="@string/customer" />
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_action_nav_menu_phone"
                    android:title="@string/contact" />
            </group>
        </menu>
    </item>

    <item android:title="@string/job_order">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_job_order"
                    android:icon="@drawable/ic_action_nav_build"
                    android:title="@string/job_order" />
            </group>
        </menu>
    </item>

    <item android:title="@string/more">
        <menu>
            <group android:checkableBehavior="single">
                <!--
                <item
                    android:id="@+id/nav_switch_plant"
                    android:icon="@drawable/ic_action_swap"
                    android:title="@string/switch_plant" />-->
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_action_nav_menu_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_action_nav_menu_power"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

</menu>
