<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollViewCustomer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAddCustomer"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_selector"
            android:drawableTop="@drawable/ic_action_frag_person_add"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="30dp"
            android:text="@string/add_customer"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnAddCompany"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/login_selector"
            android:drawableTop="@drawable/ic_action_frag_group_add"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="30dp"
            android:text="@string/add_company"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/btnAddCustomer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3" />

        <Button
            android:id="@+id/btnSearchCustomer"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_selector"
            android:drawableTop="@drawable/ic_action_frag_search"
            android:paddingTop="30dp"
            android:text="@string/search"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>